--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,18 @@
             >
               <img src="../src/img/landing.png" alt="responsive landing page" />
             </a>
+            <div class="buttons">
+              <a
+                href="https://elated-lovelace-d9a722.netlify.app/"
+                target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/threequartersdev/landing-page"
+                target="_blank"
+                >View Code</a
+              >
+            </div>
           </div>
         </div>
         <div class="project-2">
@@ -153,6 +165,12 @@
             <a href="./promotional/promotional.html" target="_blank">
               <img src="../src/img/quarter.png" alt="promotional email" />
             </a>
+            <div class="buttons">
+              <a href="./promotional/promotional.html" target="_blank"
+                >View Project</a
+              >
+              <a href="#" target="_blank">View Code</a>
+            </div>
           </div>
         </div>
         <div class="project-3">
@@ -177,6 +195,12 @@
             <a href="./newsletter/newsletter.html" target="_blank">
               <img src="../src/img/livebeacon.png" alt="newsletter email" />
             </a>
+            <div class="buttons">
+              <a href="./newsletter/newsletter.html" target="_blank"
+                >View Project</a
+              >
+              <a href="#" target="_blank">View Code</a>
+            </div>
           </div>
         </div>
         <div class="project-4">
@@ -204,6 +228,12 @@
                 alt="transactional email"
               />
             </a>
+            <div class="buttons">
+              <a href="./transactional/transactional.html" target="_blank"
+                >View Project</a
+              >
+              <a href="#" target="_blank">View Code</a>
+            </div>
           </div>
         </div>
         <div class="selected other">
@@ -226,6 +256,10 @@
           </div>
           <div class="project-5-img">
             <img src="../src/img/martina.png" alt="Personal Trainer Website" />
+            <div class="buttons">
+              <a href="#" target="_blank">View Project</a>
+              <a href="#" target="_blank">View Code</a>
+            </div>
           </div>
         </div>
         <div class="project-6">
@@ -244,10 +278,27 @@
             </div>
           </div>
           <div class="project-6-img">
-            <img
-              src="../src/img/joelene.png"
-              alt="Beauty Photographer Website"
-            />
+            <a
+              href="https://romantic-hermann-e670ec.netlify.app/"
+              target="_blank"
+            >
+              <img
+                src="../src/img/joelene.png"
+                alt="Beauty Photographer Website"
+              />
+            </a>
+            <div class="buttons">
+              <a
+                href="https://romantic-hermann-e670ec.netlify.app/"
+                target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/threequartersdev/joelene"
+                target="_blank"
+                >View Code</a
+              >
+            </div>
           </div>
         </div>
         <div class="project-7">
@@ -269,6 +320,16 @@
             <a href="https://tektonjoinery.co.uk/" target="_blank">
               <img src="../src/img/tekton.png" alt="Tekton Joinery Website" />
             </a>
+            <div class="buttons">
+              <a href="https://tektonjoinery.co.uk/" target="_blank"
+                >View Project</a
+              >
+              <a
+                href="https://github.com/threequartersdev/tekton-joinery"
+                target="_blank"
+                >View Code</a
+              >
+            </div>
           </div>
         </div>
       </div>
