martina links added

--- a/public/index.html
+++ b/public/index.html
@@ -255,9 +255,22 @@
             </div>
           </div>
           <div class="project-5-img">
-            <img src="../src/img/martina.png" alt="Personal Trainer Website" />
+            <a
+              href="https://gallant-leavitt-8b08bb.netlify.app/"
+              target="_blank"
+            >
+              <img
+                src="../src/img/martina.png"
+                alt="Personal Trainer Website"
+              />
+            </a>
+
             <div class="buttons">
-              <a href="#" target="_blank">View Project</a>
+              <a
+                href="https://gallant-leavitt-8b08bb.netlify.app/"
+                target="_blank"
+                >View Project</a
+              >
               <a href="#" target="_blank">View Code</a>
             </div>
           </div>
