martina links added

--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,11 @@
                 target="_blank"
                 >View Project</a
               >
-              <a href="#" target="_blank">View Code</a>
+              <a
+                href="https://github.com/threequartersdev/martina"
+                target="_blank"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
