code links added

--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,11 @@
               <a href="./promotional/promotional.html" target="_blank"
                 >View Project</a
               >
-              <a href="#" target="_blank">View Code</a>
+              <a
+                href="https://github.com/threequartersdev/promotional-email"
+                target="_blank"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
@@ -199,7 +203,11 @@
               <a href="./newsletter/newsletter.html" target="_blank"
                 >View Project</a
               >
-              <a href="#" target="_blank">View Code</a>
+              <a
+                href="https://github.com/threequartersdev/newsletter-email"
+                target="_blank"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
@@ -232,7 +240,11 @@
               <a href="./transactional/transactional.html" target="_blank"
                 >View Project</a
               >
-              <a href="#" target="_blank">View Code</a>
+              <a
+                href="https://github.com/threequartersdev/transactional-email"
+                target="_blank"
+                >View Code</a
+              >
             </div>
           </div>
         </div>
