added gsap scroll

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
       src="https://kit.fontawesome.com/bacf8d8a75.js"
       crossorigin="anonymous"
     ></script>
-
     <link rel="shortcut icon" type="image/ico" href="../src/img/favicon.ico" />
     <title>Three Quarters | Email Developer</title>
   </head>
@@ -88,9 +87,11 @@
             </a>
           </div>
           <ul>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="projects">
+              <h6>Projects</h6>
+            </li>
+            <li class="about"><h6>About</h6></li>
+            <li class="contact"><h6>Contact</h6></li>
           </ul>
         </nav>
         <div class="header-content">
