trying new links

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <nav id="nav">
           <div id="logo">
-            <a href="index.html">
+            <a href="/">
               <svg
                 id="Layer_1"
                 data-name="Layer 1"
