--- a/public/index.html
+++ b/public/index.html
@@ -294,9 +294,7 @@
             </a>
 
             <div class="buttons">
-              <a
-                href="https://gallant-leavitt-8b08bb.netlify.app/"
-                target="_blank"
+              <a href="https://sad-payne-48eb20.netlify.app/" target="_blank"
                 >View Project</a
               >
               <a
