links fixed plus seo

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,29 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="description"
+      content="Hi! I'm Dimitris (aka three quarters), a creative Email Developer
+    based in London, UK."
+    />
+    <meta
+      name="keywords"
+      content="web developer, email developer, html, css, sass, mailchimp, London developer, email marketing, marketing specialist, html email, html email developer, foundation email"
+    />
+
+    <!-- Facebook -->
+    <meta property="og:title" content="Three Quarters | Email Developer" />
+    <meta property="og:description" content="London based Email Developer" />
+    <meta property="og:image" content="../src/img/backgroundseo.png" />
+    <meta property="og:url" content="http://www.threequarters.dev" />
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Three Quarters | Email Developer" />
+    <meta name="twitter:description" content="London based Email Developer" />
+    <meta name="twitter:image" content="../src/img/backgroundseo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <script
       src="https://kit.fontawesome.com/bacf8d8a75.js"
       crossorigin="anonymous"
@@ -103,10 +126,10 @@
           </div>
           <ul>
             <li class="projects">
-              <h6>Projects</h6>
+              <h6 class="fromLeft">Projects</h6>
             </li>
             <li class="about"><h6>About</h6></li>
-            <li class="contact"><h6>Contact</h6></li>
+            <li class="contact"><h6 class="fromRight">Contact</h6></li>
           </ul>
         </nav>
         <div class="header-content">
