--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,7 @@
             </div>
           </div>
           <div class="project-5-img">
-            <a href="https://sad-payne-48eb20.netlify.app/" target="_blank">
+            <a href="http://www.martinafitpro.com" target="_blank">
               <img
                 src="../src/img/martina.png"
                 alt="Personal Trainer Website"
@@ -314,7 +314,7 @@
             </a>
 
             <div class="buttons">
-              <a href="https://sad-payne-48eb20.netlify.app/" target="_blank"
+              <a href="http://www.martinafitpro.com" target="_blank"
                 >View Project</a
               >
               <a
