ikos construction website added to projects

--- a/public/index.html
+++ b/public/index.html
@@ -17,35 +17,35 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta
-      content="Hi! I'm Dimitris (aka three quarters), a creative Email Developer
-                                        based in London, UK."
       name="description"
+      content="Hi! I'm Dimitris (aka three quarters), a creative Email Developer
+    based in London, UK."
     />
     <meta
-      content="web developer, email developer, html, css, sass, mailchimp, London developer, email marketing, marketing specialist, html email, html email developer, foundation email"
       name="keywords"
+      content="web developer, email developer, html, css, sass, mailchimp, London developer, email marketing, marketing specialist, html email, html email developer, foundation email"
     />
 
     <!-- Facebook -->
-    <meta content="Three Quarters | Email Developer" property="og:title" />
-    <meta content="London based Email Developer" property="og:description" />
-    <meta content="../src/img/backgroundseo.png" property="og:image" />
-    <meta content="http://www.threequarters.dev" property="og:url" />
+    <meta property="og:title" content="Three Quarters | Email Developer" />
+    <meta property="og:description" content="London based Email Developer" />
+    <meta property="og:image" content="../src/img/backgroundseo.png" />
+    <meta property="og:url" content="http://www.threequarters.dev" />
 
     <!-- Twitter -->
-    <meta content="Three Quarters | Email Developer" name="twitter:title" />
-    <meta content="London based Email Developer" name="twitter:description" />
-    <meta content="../src/img/backgroundseo.png" name="twitter:image" />
-    <meta content="summary_large_image" name="twitter:card" />
+    <meta name="twitter:title" content="Three Quarters | Email Developer" />
+    <meta name="twitter:description" content="London based Email Developer" />
+    <meta name="twitter:image" content="../src/img/backgroundseo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <script
-      crossorigin="anonymous"
       src="https://kit.fontawesome.com/bacf8d8a75.js"
+      crossorigin="anonymous"
     ></script>
-    <link href="../src/img/favicon.ico" rel="shortcut icon" type="image/ico" />
+    <link rel="shortcut icon" type="image/ico" href="../src/img/favicon.ico" />
     <title>Three Quarters | Email Developer</title>
   </head>
   <body>
@@ -55,10 +55,10 @@
           <div id="logo">
             <a href="/">
               <svg
-                data-name="Layer 1"
                 id="Layer_1"
-                viewbox="0 0 539.7 171.76"
+                data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 539.7 171.76"
               >
                 <title>logo</title>
                 <path
@@ -128,12 +128,8 @@
             <li class="projects">
               <h6 class="fromLeft">Projects</h6>
             </li>
-            <li class="about">
-              <h6>About</h6>
-            </li>
-            <li class="contact">
-              <h6 class="fromRight">Contact</h6>
-            </li>
+            <li class="about"><h6>About</h6></li>
+            <li class="contact"><h6 class="fromRight">Contact</h6></li>
           </ul>
         </nav>
         <div class="header-content">
@@ -170,7 +166,7 @@
               href="https://xenodochial-turing-1ea3e7.netlify.app/"
               target="_blank"
             >
-              <img alt="responsive landing page" src="../src/img/landing.png" />
+              <img src="../src/img/landing.png" alt="responsive landing page" />
             </a>
             <div class="buttons">
               <a
@@ -206,7 +202,7 @@
           </div>
           <div class="project-2-img">
             <a href="./promotional/promotional.html" target="_blank">
-              <img alt="promotional email" src="../src/img/quarter.png" />
+              <img src="../src/img/quarter.png" alt="promotional email" />
             </a>
             <div class="buttons">
               <a href="./promotional/promotional.html" target="_blank"
@@ -240,7 +236,7 @@
           </div>
           <div class="project-3-img">
             <a href="./newsletter/newsletter.html" target="_blank">
-              <img alt="newsletter email" src="../src/img/livebeacon.png" />
+              <img src="../src/img/livebeacon.png" alt="newsletter email" />
             </a>
             <div class="buttons">
               <a href="./newsletter/newsletter.html" target="_blank"
@@ -275,8 +271,8 @@
           <div class="project-4-img">
             <a href="./transactional/transactional.html" target="_blank">
               <img
-                alt="transactional email"
                 src="../src/img/transactional.png"
+                alt="transactional email"
               />
             </a>
             <div class="buttons">
@@ -293,36 +289,6 @@
         </div>
         <div class="selected other">
           <h5>Other Projects</h5>
-        </div>
-        <div class="project-ikos">
-          <div class="project-ikos-text">
-            <div>
-              <h4>Ikos Construction Ltd Website</h4>
-            </div>
-            <div>
-              <p>A Responsive Website for Ikos Construction Ltd</p>
-            </div>
-            <div>
-              <p>
-                Technologies used:
-                <b>HTML, SASS, JavaScript, GSAP, Photoshop</b>
-              </p>
-            </div>
-          </div>
-          <div class="project-ikos-img">
-            <a href="http://www.ikosconstruction.com/" target="_blank">
-              <img alt="Ikos Construction Website" src="../src/img/ikos.png" />
-            </a>
-
-            <div class="buttons">
-              <a href="http://www.ikosconstruction.com/" target="_blank"
-                >View Project</a
-              >
-              <a href="https://github.com/threequartersdev/ikos" target="_blank"
-                >View Code</a
-              >
-            </div>
-          </div>
         </div>
         <div class="project-5">
           <div class="project-5-text">
@@ -342,8 +308,8 @@
           <div class="project-5-img">
             <a href="http://www.martinafitpro.com" target="_blank">
               <img
-                alt="Personal Trainer Website"
                 src="../src/img/martina.png"
+                alt="Personal Trainer Website"
               />
             </a>
 
@@ -380,8 +346,8 @@
               target="_blank"
             >
               <img
-                alt="Beauty Photographer Website"
                 src="../src/img/joelene.png"
+                alt="Beauty Photographer Website"
               />
             </a>
             <div class="buttons">
@@ -415,7 +381,7 @@
           </div>
           <div class="project-7-img">
             <a href="https://tektonjoinery.co.uk/" target="_blank">
-              <img alt="Tekton Joinery Website" src="../src/img/tekton.png" />
+              <img src="../src/img/tekton.png" alt="Tekton Joinery Website" />
             </a>
             <div class="buttons">
               <a href="https://tektonjoinery.co.uk/" target="_blank"
@@ -527,16 +493,16 @@
         </div>
         <div class="contact-form">
           <form
-            data-netlify-recaptcha="true"
-            data-netlify="true"
-            method="POST"
             name="contact"
+            method="POST"
+            data-netlify="true"
+            data-netlify-recaptcha="true"
           >
             <p>
-              <label>Your Name: <input name="name" type="text" /></label>
+              <label>Your Name: <input type="text" name="name" /></label>
             </p>
             <p>
-              <label>Your Email: <input name="email" type="email" /></label>
+              <label>Your Email: <input type="email" name="email" /></label>
             </p>
             <p>
               <label
