--- a/public/index.html
+++ b/public/index.html
@@ -54,74 +54,7 @@
         <nav id="nav">
           <div id="logo">
             <a href="/">
-              <svg
-                data-name="Layer 1"
-                id="Layer_1"
-                viewbox="0 0 539.7 171.76"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <title>logo</title>
-                <path
-                  d="M30.3,33.74H81.14A17.71,17.71,0,0,0,98.84,16H48A17.7,17.7,0,0,0,30.3,33.74Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M187.1,55.09H144.85a17.63,17.63,0,0,0,17.63,17.64H187.1v40.72h0a20.83,20.83,0,0,0,20.83-20.83h0V16h0A20.83,20.83,0,0,0,187.1,36.86h0Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M293.45,57.56h-2.12V31.94h.05l-.05-.07V16h0a20.83,20.83,0,0,0-20.82,20.83h0v76.59h0a20.82,20.82,0,0,0,20.82-20.83h0V67.94l13.84,24.58A41.08,41.08,0,0,0,341,113.45h0L314.09,69.14h0A24.18,24.18,0,0,0,293.45,57.56Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M394,113.45h39.65a17.7,17.7,0,0,0,17.71-17.7H414.79V33.6h36.54A17.57,17.57,0,0,0,433.76,16H394Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M533.47,33.6H570A17.56,17.56,0,0,0,552.43,16H512.64V53.63h.8a20,20,0,0,0,20-20Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M570,95.75H533.47V92.16a20.84,20.84,0,0,0-20.83-20.83h0v42.12H552.3A17.69,17.69,0,0,0,570,95.75Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M482,53.63h0a17.7,17.7,0,0,0,17.7,17.7h13V53.63Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M231.4,187.8h0a3.86,3.86,0,0,1-3.86-3.87h0v-11.3a8.73,8.73,0,0,1-8.28,5.08,9.82,9.82,0,0,1-7.79-3.31c-1.94-2.21-2.91-5.18-2.91-8.93a12.85,12.85,0,0,1,3-8.87,10,10,0,0,1,7.88-3.35,9,9,0,0,1,4.78,1.32,9.68,9.68,0,0,1,3.45,3.76v-4.26h3.76Zm-3.77-22.33a9,9,0,0,0-2-6.22A7.13,7.13,0,0,0,220,157a6.68,6.68,0,0,0-5.43,2.38,10,10,0,0,0-2,6.57,8.26,8.26,0,0,0,1.94,5.84,6.94,6.94,0,0,0,5.37,2.11,7.21,7.21,0,0,0,5.58-2.31,8.63,8.63,0,0,0,2.12-6.12Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M237.28,154.08a4.06,4.06,0,0,1,4.06,4.06h0v7.08q0,4.89,1.45,6.83t4.89,1.95q3.44,0,4.87-1.92t1.42-6.86V154.07h0a4,4,0,0,1,4,4h0v9.26q0,5.13-2.62,7.77t-7.73,2.64q-5.06,0-7.69-2.65c-1.75-1.77-2.62-4.35-2.62-7.76V154.08Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M286.66,154.08V173a3.76,3.76,0,0,1-3.76,3.77h0v-4.11a10,10,0,0,1-3.48,3.78,8.94,8.94,0,0,1-4.75,1.3,10,10,0,0,1-7.87-3.36,13,13,0,0,1-3-8.89q0-5.59,2.9-8.9a9.8,9.8,0,0,1,7.76-3.31,9.31,9.31,0,0,1,4.94,1.27,9.16,9.16,0,0,1,3.38,3.81v-.4a3.86,3.86,0,0,1,3.87-3.86h0Zm-3.76,11.54a8.9,8.9,0,0,0-2.1-6.18,7.75,7.75,0,0,0-10.91-.19,8.63,8.63,0,0,0-2,6,9.29,9.29,0,0,0,2,6.34,7.09,7.09,0,0,0,5.59,2.23,7,7,0,0,0,5.44-2.17A8.7,8.7,0,0,0,282.9,165.62Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M294.75,172.91V154.08h3.44v4.7a12,12,0,0,1,3.32-4.21,7.16,7.16,0,0,1,4.29-1.26,7.46,7.46,0,0,1,1.33.11,9.38,9.38,0,0,1,1.29.33l-1.29,3.5a10.62,10.62,0,0,0-1.26-.34,6.2,6.2,0,0,0-1.14-.11,5.24,5.24,0,0,0-4.61,2.22c-1,1.48-1.53,3.7-1.53,6.68v11.05h0A3.84,3.84,0,0,1,294.75,172.91Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M317.26,157.27h-4.17v-3.19h4.17v-9.15h0a4,4,0,0,1,4,4v5.17h4.16v3.2h-4.15v19.47h0a4,4,0,0,1-4-4Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M352.48,166h-18v.35a8.31,8.31,0,0,0,2.08,5.89,7.08,7.08,0,0,0,5.42,2.24,7.26,7.26,0,0,0,4.12-1.22,8.55,8.55,0,0,0,1.38-1.17,3.76,3.76,0,0,1,4.81-.56h0a11.34,11.34,0,0,1-10.5,6.2,10.93,10.93,0,0,1-8.38-3.42,12.61,12.61,0,0,1-3.19-9,12.23,12.23,0,0,1,3.17-8.72,10.63,10.63,0,0,1,8.15-3.4,10.25,10.25,0,0,1,8,3.22q2.94,3.23,2.94,8.8Zm-4.16-3.14a6.49,6.49,0,0,0-2-4.62,7,7,0,0,0-4.91-1.63,6.65,6.65,0,0,0-6.9,6.25Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M358.36,172.91V154.08h0a3.44,3.44,0,0,1,3.44,3.44h0v1.26a12,12,0,0,1,3.32-4.21,7.2,7.2,0,0,1,4.29-1.26,7.5,7.5,0,0,1,1.34.11,9.38,9.38,0,0,1,1.29.33l-1.29,3.5a11.33,11.33,0,0,0-1.27-.34,6.1,6.1,0,0,0-1.13-.11,5.23,5.23,0,0,0-4.61,2.22c-1,1.48-1.54,3.7-1.54,6.68v11.05h0A3.84,3.84,0,0,1,358.36,172.91Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-                <path
-                  d="M374.52,172.93l.08-.05a4.45,4.45,0,0,1,5.22.26c.13.09.26.19.4.27a6.19,6.19,0,0,0,3.4.91,4.81,4.81,0,0,0,3.08-.94,3,3,0,0,0,1.18-2.48,2.66,2.66,0,0,0-.81-2,7.69,7.69,0,0,0-2.76-1.46l-.65-.22q-8.27-2.85-8.27-7.14a6.18,6.18,0,0,1,2.23-4.93,8.62,8.62,0,0,1,5.8-1.9,10.24,10.24,0,0,1,5.05,1.17,6.75,6.75,0,0,1,3,3.33l-.17.11a4.09,4.09,0,0,1-4.64-.32l-.38-.26a5.84,5.84,0,0,0-3.13-.84,4,4,0,0,0-2.79,1,3.11,3.11,0,0,0-1.08,2.44c0,1.39,1.51,2.55,4.51,3.49.56.19,1,.33,1.34.42a12.44,12.44,0,0,1,5.14,2.72,5.57,5.57,0,0,1,1.45,4,6.58,6.58,0,0,1-2.29,5.22,8.78,8.78,0,0,1-6,2,11.27,11.27,0,0,1-5.39-1.18A8.94,8.94,0,0,1,374.52,172.93Z"
-                  transform="translate(-30.3 -16.03)"
-                />
-              </svg>
+             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 539.7 171.76"><title>logo</title><path d="M30.3,33.74H81.14A17.71,17.71,0,0,0,98.84,16H48A17.7,17.7,0,0,0,30.3,33.74Z" transform="translate(-30.3 -16.03)"/><path d="M187.1,55.09H144.85a17.63,17.63,0,0,0,17.63,17.64H187.1v40.72h0a20.83,20.83,0,0,0,20.83-20.83h0V16h0A20.83,20.83,0,0,0,187.1,36.86h0Z" transform="translate(-30.3 -16.03)"/><path d="M293.45,57.56h-2.12V31.94h.05l-.05-.07V16h0a20.83,20.83,0,0,0-20.82,20.83h0v76.59h0a20.82,20.82,0,0,0,20.82-20.83h0V67.94l13.84,24.58A41.08,41.08,0,0,0,341,113.45h0L314.09,69.14h0A24.18,24.18,0,0,0,293.45,57.56Z" transform="translate(-30.3 -16.03)"/><path d="M394,113.45h39.65a17.7,17.7,0,0,0,17.71-17.7H414.79V33.6h36.54A17.57,17.57,0,0,0,433.76,16H394Z" transform="translate(-30.3 -16.03)"/><path d="M533.47,33.6H570A17.56,17.56,0,0,0,552.43,16H512.64V53.63h.8a20,20,0,0,0,20-20Z" transform="translate(-30.3 -16.03)"/><path d="M570,95.75H533.47V92.16a20.84,20.84,0,0,0-20.83-20.83h0v42.12H552.3A17.69,17.69,0,0,0,570,95.75Z" transform="translate(-30.3 -16.03)"/><path d="M482,53.63h0a17.7,17.7,0,0,0,17.7,17.7h13V53.63Z" transform="translate(-30.3 -16.03)"/><path d="M231.4,187.8h0a3.86,3.86,0,0,1-3.86-3.87h0v-11.3a8.73,8.73,0,0,1-8.28,5.08,9.82,9.82,0,0,1-7.79-3.31c-1.94-2.21-2.91-5.18-2.91-8.93a12.85,12.85,0,0,1,3-8.87,10,10,0,0,1,7.88-3.35,9,9,0,0,1,4.78,1.32,9.68,9.68,0,0,1,3.45,3.76v-4.26h3.76Zm-3.77-22.33a9,9,0,0,0-2-6.22A7.13,7.13,0,0,0,220,157a6.68,6.68,0,0,0-5.43,2.38,10,10,0,0,0-2,6.57,8.26,8.26,0,0,0,1.94,5.84,6.94,6.94,0,0,0,5.37,2.11,7.21,7.21,0,0,0,5.58-2.31,8.63,8.63,0,0,0,2.12-6.12Z" transform="translate(-30.3 -16.03)"/><path d="M237.28,154.08a4.06,4.06,0,0,1,4.06,4.06h0v7.08q0,4.89,1.45,6.83t4.89,1.95q3.44,0,4.87-1.92t1.42-6.86V154.07h0a4,4,0,0,1,4,4h0v9.26q0,5.13-2.62,7.77t-7.73,2.64q-5.06,0-7.69-2.65c-1.75-1.77-2.62-4.35-2.62-7.76V154.08Z" transform="translate(-30.3 -16.03)"/><path d="M286.66,154.08V173a3.76,3.76,0,0,1-3.76,3.77h0v-4.11a10,10,0,0,1-3.48,3.78,8.94,8.94,0,0,1-4.75,1.3,10,10,0,0,1-7.87-3.36,13,13,0,0,1-3-8.89q0-5.59,2.9-8.9a9.8,9.8,0,0,1,7.76-3.31,9.31,9.31,0,0,1,4.94,1.27,9.16,9.16,0,0,1,3.38,3.81v-.4a3.86,3.86,0,0,1,3.87-3.86h0Zm-3.76,11.54a8.9,8.9,0,0,0-2.1-6.18,7.75,7.75,0,0,0-10.91-.19,8.63,8.63,0,0,0-2,6,9.29,9.29,0,0,0,2,6.34,7.09,7.09,0,0,0,5.59,2.23,7,7,0,0,0,5.44-2.17A8.7,8.7,0,0,0,282.9,165.62Z" transform="translate(-30.3 -16.03)"/><path d="M294.75,172.91V154.08h3.44v4.7a12,12,0,0,1,3.32-4.21,7.16,7.16,0,0,1,4.29-1.26,7.46,7.46,0,0,1,1.33.11,9.38,9.38,0,0,1,1.29.33l-1.29,3.5a10.62,10.62,0,0,0-1.26-.34,6.2,6.2,0,0,0-1.14-.11,5.24,5.24,0,0,0-4.61,2.22c-1,1.48-1.53,3.7-1.53,6.68v11.05h0A3.84,3.84,0,0,1,294.75,172.91Z" transform="translate(-30.3 -16.03)"/><path d="M317.26,157.27h-4.17v-3.19h4.17v-9.15h0a4,4,0,0,1,4,4v5.17h4.16v3.2h-4.15v19.47h0a4,4,0,0,1-4-4Z" transform="translate(-30.3 -16.03)"/><path d="M352.48,166h-18v.35a8.31,8.31,0,0,0,2.08,5.89,7.08,7.08,0,0,0,5.42,2.24,7.26,7.26,0,0,0,4.12-1.22,8.55,8.55,0,0,0,1.38-1.17,3.76,3.76,0,0,1,4.81-.56h0a11.34,11.34,0,0,1-10.5,6.2,10.93,10.93,0,0,1-8.38-3.42,12.61,12.61,0,0,1-3.19-9,12.23,12.23,0,0,1,3.17-8.72,10.63,10.63,0,0,1,8.15-3.4,10.25,10.25,0,0,1,8,3.22q2.94,3.23,2.94,8.8Zm-4.16-3.14a6.49,6.49,0,0,0-2-4.62,7,7,0,0,0-4.91-1.63,6.65,6.65,0,0,0-6.9,6.25Z" transform="translate(-30.3 -16.03)"/><path d="M358.36,172.91V154.08h0a3.44,3.44,0,0,1,3.44,3.44h0v1.26a12,12,0,0,1,3.32-4.21,7.2,7.2,0,0,1,4.29-1.26,7.5,7.5,0,0,1,1.34.11,9.38,9.38,0,0,1,1.29.33l-1.29,3.5a11.33,11.33,0,0,0-1.27-.34,6.1,6.1,0,0,0-1.13-.11,5.23,5.23,0,0,0-4.61,2.22c-1,1.48-1.54,3.7-1.54,6.68v11.05h0A3.84,3.84,0,0,1,358.36,172.91Z" transform="translate(-30.3 -16.03)"/><path d="M374.52,172.93l.08-.05a4.45,4.45,0,0,1,5.22.26c.13.09.26.19.4.27a6.19,6.19,0,0,0,3.4.91,4.81,4.81,0,0,0,3.08-.94,3,3,0,0,0,1.18-2.48,2.66,2.66,0,0,0-.81-2,7.69,7.69,0,0,0-2.76-1.46l-.65-.22q-8.27-2.85-8.27-7.14a6.18,6.18,0,0,1,2.23-4.93,8.62,8.62,0,0,1,5.8-1.9,10.24,10.24,0,0,1,5.05,1.17,6.75,6.75,0,0,1,3,3.33l-.17.11a4.09,4.09,0,0,1-4.64-.32l-.38-.26a5.84,5.84,0,0,0-3.13-.84,4,4,0,0,0-2.79,1,3.11,3.11,0,0,0-1.08,2.44c0,1.39,1.51,2.55,4.51,3.49.56.19,1,.33,1.34.42a12.44,12.44,0,0,1,5.14,2.72,5.57,5.57,0,0,1,1.45,4,6.58,6.58,0,0,1-2.29,5.22,8.78,8.78,0,0,1-6,2,11.27,11.27,0,0,1-5.39-1.18A8.94,8.94,0,0,1,374.52,172.93Z" transform="translate(-30.3 -16.03)"/></svg>
             </a>
           </div>
           <ul>
